--- a/pom.xml
+++ b/pom.xml
@@ -48,8 +48,9 @@
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
-            <version>5.1.18</version>
+            <version>8.0.15</version>
         </dependency>
+
         <!--freemaker-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -151,6 +152,19 @@
             <groupId>org.quartz-scheduler</groupId>
             <artifactId>quartz</artifactId>
             <version>2.3.2</version> <!-- 或者使用最新版本 -->
+        </dependency>
+
+
+        <!--日志管理-->
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>1.7.32</version> <!-- 使用合适的版本 -->
+        </dependency>
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>1.2.6</version> <!-- 使用合适的版本 -->
         </dependency>
 
     </dependencies>
