目前只能下载一个附件，之前在存储时由于使用的是数组而不是集合，会导致后一个附件会将前一个附件进行覆盖

--- a/pom.xml
+++ b/pom.xml
@@ -167,6 +167,16 @@
             <version>1.2.6</version> <!-- 使用合适的版本 -->
         </dependency>
 
+
+        <!--二进制数据解析生成pdf-->
+        <dependency>
+            <groupId>com.itextpdf</groupId>
+            <artifactId>itextpdf</artifactId>
+            <version>5.5.13</version> <!-- 或者选择其他版本 -->
+        </dependency>
+
+
+
     </dependencies>
 
     <build>
