--- a/pom.xml
+++ b/pom.xml
@@ -167,6 +167,13 @@
             <version>1.2.6</version> <!-- 使用合适的版本 -->
         </dependency>
 
+        <!--fastjson-->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>2.0.32</version>
+        </dependency>
+
 
         <!--二进制数据解析生成pdf-->
         <dependency>
